@@ -14,6 +14,8 @@
 -- Cygwin/MinGW: Provide _win32_utf8_wide and _win32_wide_utf8 unconditionally.
    It is needed by the WASAPI plugins, the underlying conversion functions
    should be present since Windows 2000. Fixes WASAPI support on Cygwin.
+- libout123:
+-- pulse: initialize more error codes to avoid bogus error messages
 
 1.29.4
 ------
